2005-02-08  John Sullivan  <john@wjsullivan.net>

	* README: Added note about dependency on external url.el, not
	distributed with delicious-el.

2005-02-07  John Sullivan  <john@wjsullivan.net>

	* delicious.el (delicious-search-buffer-finish): Changed order to
	activate View mode before Delicious Search mode.
	(delicious-search-previous-result): New function to move backwards
	by link in the search results buffer.
	
	* README: Added documentation section "* Interactive search
	commands" with information about all of the new searching functions.

	* delicious.el (delicious-search-posts-regexp): Added match
	counting for display in the search results buffer.
	(delicious-search-description-regexp): Added match counting for
	display in the search results buffer.
	(delicious-search-tags-regexp): Added match counting for display
	in search results buffer.
	(delicious-search-link-regexp): Added match counting for display
	in search results buffer.
	(delicious-search-href-regexp): Changed name of
	delicious-search-link-regexp to delicious-search-href-regexp.
	(delicious-search-tags): Added match counting for display in
	search results buffer.

Sun Feb  6 16:17:22 EST 2005  John Sullivan <john@wjsullivan.net>
  * Improvements to *delicious search results* buffer and window handling
  
  * New delicious-search-buffer-prep function to consolidate preparation common
    between the search functions. This affects all delicious-search-* functions.
  
  * New delicious-search-buffer-finish function to consolidate post-searching
    duties between the search functions. This affects all delicious-search-*
    functions.
  
  * If a search function is called from the *delicious search results* buffer, we
    don't switch windows. 
  
  * *delicious search results* buffer is now in read-only View Mode, for easier
     scrolling.

    M ./ChangeLog +14
    M ./delicious.el -31 +38
	
Sun Feb  6 14:55:11 EST 2005  John Sullivan <john@wjsullivan.net>